# rust-wasm-template

./: Cargo.toml  Makefile  README.md  grep
.cargo/: config
daedal/: Cargo.toml  package-lock.json
daedal/.cargo/: config
daedal/src/: julia.rs  lib.rs  mandelbrot.rs  options.rs
mandelbrot-gui/: package.json
src/: events.rs  main.rs
static/: package-lock.json  package.json
static/public/: app.js  daedal.wasm  daedal_gui.js  daedal_gui.wasm  index.html  index.js  rust_sdl2_template.wasm
static/src/: daedal-wasm.d  daedal-wasm.js  daedal_wasm.wasm
