[package]
name = "rust-sdl2-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
emscripten_main_loop = "0.1.1"

[dependencies.sdl2]
version = "0.35.1"
default-features = false
