[package]
name = "daedal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
ansi_term = "0.12.1"
structopt = "0.3.23"
egui = "0.15.0"
stdweb = "0.4.2"
rayon = "1.5"
wasm-bindgen = "0.2.74"

[lib]
crate-type = ["cdylib", "rlib"]
